--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "response-time": "^2.3.3"
   }
