--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
-    "response-time": "^2.3.3"
+    "response-time": "^2.3.3",
+    "sequelize": "^6.37.7"
   }
 }
